--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -343,8 +343,7 @@
     ">
     <div class="hero-logo">
       <img 
-        src="images/title-logo.png" 
-        srcset="images/title-logo.png 1x, images/title-logo@2x.png 2x"
+        src="images/image.png" 
         alt="異世界転生演劇 〜君の剣が導く運命〜"
         class="title-logo"
         width="800"
@@ -352,7 +351,7 @@
       >
     </div>
     <div class="hero-caption" data-aos="fade-up" data-aos-delay="200">
-      <p>――運命を変える剣が、ここに蘇る――</p>
+      <p>伝説、はじまる――――</p>
       <a href="#pv" class="btn-primary">PVを見る</a>
     </div>
   </section>
