--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -58,6 +58,10 @@
   --table-border-color: #ddeeff; /* 薄い色 */
     }
 
+html {
+  color-scheme: light;
+}
+
     /* ==== ベース設定 ==== */
     body {
       font-family: 'Noto Serif JP', serif;
