--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" href="css/slick.css">
 </head>
 <body>
     <!-- レスポンシブ込みの追従ヘッダー ここまで -->
@@ -41,7 +41,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/menu.js"></script>
     <script src="js/slide.js"></script>
 </body>
