--- a/index.html
+++ b/index.html
@@ -7,31 +7,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css">
 </head>
 <body>
     <!-- レスポンシブ込みの追従ヘッダー ここまで -->
     <h1><span class="satcol">6/21(土)</span>、<span class="suncol">6/22(日)</span></h1>
     <p><span class="smalltext">※6/21は午後のみ保護者公開、6/22は一般公開です。</span></p>
     <h2>フロアマップ</h2>
-    <div class="slide">
-        <div>
-            <img src="image/floor_0.png">
-            <p>一階</p>
-        </div>
-        <div>
-            <img src="image/floor_1.png">
-            <p>二階</p>
-        </div>
-        <div>
-            <img src="image/floor_2.png">
-            <p>三階</p>
-        </div>
-        <div>
-            <img src="image/floor_3.png">
-            <p>四階</p>
-        </div>
-    </div>
+    <div>
+	<ul class="slider">
+	    <li><img src="/image/floor_0.png" alt="期間限定 10,000円OFF"></li>
+	    <li><img src="/image/floor_1.png" alt="期間限定 送料無料"></li>
+	    <li><img src="/image/floor_2.png" alt="期間限定 全品半額"></li>
+        <li><img src="/image/floor_3.png" alt="期間限定 全品半額"></li>
+	</ul>
+</div>
     <h2>各団体ホームページ</h2>
     <h2>タイムテーブル</h2>
     <h2>来場時の注意</h2>
@@ -41,8 +32,15 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script>
+	$('.slider').slick({
+		autoplay: true,
+		dots: true,
+	});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/slide.js"></script>
+    
 </body>
 </html>
