--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <h2>フロアマップ</h2>
     <div>
 	<ul class="slider">
-	    <li><img src="/image/floor_0.png" alt="期間限定 10,000円OFF"></li>
-	    <li><img src="/image/floor_1.png" alt="期間限定 送料無料"></li>
-	    <li><img src="/image/floor_2.png" alt="期間限定 全品半額"></li>
-        <li><img src="/image/floor_3.png" alt="期間限定 全品半額"></li>
+	    <li><img src="image/floor_0.png" alt="期間限定 10,000円OFF"></li>
+	    <li><img src="image/floor_1.png" alt="期間限定 送料無料"></li>
+	    <li><img src="image/floor_2.png" alt="期間限定 全品半額"></li>
+        <li><img src="image/floor_3.png" alt="期間限定 全品半額"></li>
 	</ul>
 </div>
     <h2>各団体ホームページ</h2>
