--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -431,7 +431,7 @@ html {
       <h2>プロモーションビデオ（PV）</h2>
       <div class="video-container" data-aos="fade-up" data-aos-delay="100">
         <iframe 
-          src="https://www.youtube.com/embed/daiVaE7yhGA&si=icL2wyfnk55qKIAE" 
+          src="https://www.youtube.com/embed/daiVaE7yhGA" 
           title="PV: 異世界転生演劇 〜君の剣が導く運命〜" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
