--- a/class/37R/index.html
+++ b/class/37R/index.html
@@ -5,7 +5,7 @@
   <!-- モバイル対応のビューポート設定 -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>異世界転生演劇 〜君の剣が導く運命〜</title>
+  <title>元イケメン高校生の俺はチート能力ステータス∞、即死魔法で無双します</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -380,19 +380,29 @@ html {
         box-shadow: none;
       }
     }
+
+.navbar {
+    display:table;
+    margin:0 auto;
+}
+.navbar li {
+    display:table-cell;
+}
+.navbar li + li {
+    padding-left:20px;
+}
   </style>
 </head>
 <body>
   <!-- Header: 必要に応じてロゴを置かずナビのみ -->
   <header class="container">
     <!-- もしヘッダーにもロゴを置くなら、ここに <img class="title-logo"...> を追加可能 -->
-    <nav class="slide-up" data-aos="fade-up">
+    <nav class="slide-up navbar" data-aos="fade-up">
       <ul>
         <li><a href="#pv">PV</a></li>
         <li><a href="#synopsis">あらすじ</a></li>
         <li><a href="#characters">登場人物</a></li>
         <li><a href="#schedule">上演時間</a></li>
-        <li><a href="#cast-message">キャスト</a></li>
         <li><a href="#access">アクセス</a></li>
       </ul>
     </nav>
@@ -417,7 +427,7 @@ html {
     <div class="hero-logo">
       <img 
         src="images/image.png" 
-        alt="異世界転生演劇 〜君の剣が導く運命〜"
+        alt="元イケメン高校生の俺はチート能力ステータス∞、即死魔法で無双します"
         class="title-logo"
         width="1000"
         height="auto"
@@ -432,7 +442,7 @@ html {
       <div class="video-container" data-aos="fade-up" data-aos-delay="100">
         <iframe 
           src="https://www.youtube.com/embed/daiVaE7yhGA" 
-          title="PV: 異世界転生演劇 〜君の剣が導く運命〜" 
+          title="PV: 元イケメン高校生の俺はチート能力ステータス∞、即死魔法で無双します" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen>
@@ -446,11 +456,11 @@ html {
     <!-- あらすじ -->
     <section id="synopsis" data-aos="fade-up" class="slide-up">
       <h2>あらすじ</h2>
-      <p>
-        ブラック企業に勤める青年・和也は、ある日異世界へと転移してしまう。<br>
-        剣と魔法の世界で目覚めた彼は、運命の少女と出会い、「滅びの予言」を覆す旅に出る――。<br>
-        果たして彼は、元の世界に戻るのか？ それともこの世界を選ぶのか？<br>
-        これは、一人の青年が「選択」と「希望」を見つける物語。
+      <p>超イケメン高校生、学校の王子であるアキラの人生は、事故(？)によりあっけなく幕を閉じた......はずだった。だが、目を覚ますと神が現れ、
+        <br>「汝に新たなる生を与えよう」
+        <br>「なんだこのステータス！？」
+        <br>授かったのはステータス♾️と即死魔法！？
+        <br>イケメン高校生アキラの異世界無双ライフが今始まる......！
       </p>
     </section>
 
@@ -459,34 +469,26 @@ html {
       <h2>登場人物</h2>
       <div class="characters">
         <div class="character" data-aos="fade-up" data-aos-delay="100">
-          <img src="https://via.placeholder.com/100x150" alt="アキラ">
+          <img src="images/akira.png" alt="アキラ">
           <div>
             <strong>アキラ</strong><br>
-            ほげほげプレースホルダー
+            超イケメン高校生だったが異世界へ。即死魔法とステータス♾️で無双する。<br>好きなもの:数学、ぱんつ
           </div>
         </div>
         <div class="character" data-aos="fade-up" data-aos-delay="200">
-          <img src="https://via.placeholder.com/100x150" alt="ローゼ">
+          <img src="images/rose.png" alt="ローゼ">
           <div>
             <strong>ローゼ</strong><br>
-            ふーばープレースホルダー
+            アキラが異世界で出会った、かよわい乙女。だが裏の顔はパチカスandヤニカス。ローゼをめぐって物語が二転三転？<br>好きなもの:酒、タバコ、パチンコ、男
           </div>
         </div>
         <div class="character" data-aos="fade-up" data-aos-delay="300">
-          <img src="https://via.placeholder.com/100x150" alt="魔王">
+          <img src="images/demonking.png" alt="魔王">
           <div>
             <strong>魔王</strong><br>
-            ぴよぴよプレースホルダー
+            世界制服を目論む最強の魔族の王。と思いきや、本当は世界制服をしたいわけではなく...<br>好きなもの:UNO、安定した将来
           </div>
         </div>
-        <div class="character" data-aos="fade-up" data-aos-delay="400">
-          <img src="https://via.placeholder.com/100x150" alt="神">
-          <div>
-            <strong>神</strong><br>
-            ふがふがプレースホルダー
-          </div>
-        </div>
-      </div>
     </section>
 
     <!-- 上演時間 -->
@@ -559,50 +561,19 @@ html {
     </table>
   </div>
 
-  <p>※本公演はチケット制となっているためチケットの確保をお忘れなく</p>
+  <p>本公演は整理券制となっているため整理券の確保をお忘れなく！！！</p>
   <p>※公演開始の10分前程にいらっしゃると入場がスムーズになります。余裕を持ってお越しください。</p>
 </section>
-
-    <!-- キャストからの一言 -->
-    <section id="cast-message" data-aos="fade-up" class="slide-up">
-      <h2>キャストからの一言</h2>
-      <p data-aos="fade-up" data-aos-delay="100">
-        <strong>山田 太郎（和也 役）:</strong><br>
-        「誰もが抱える“選択”を、全力で演じました。ぜひ劇場でご覧ください！」<br><br>
-      </p>
-      <p data-aos="fade-up" data-aos-delay="200">
-        <strong>鈴木 花子（リリア 役）:</strong><br>
-        「リリアの想いが、あなたの心に届きますように。」<br><br>
-      </p>
-      <p data-aos="fade-up" data-aos-delay="300">
-        <strong>佐藤 一郎（ガルド 役）:</strong><br>
-        「この作品を通じて、異世界の深さを感じていただければ幸いです。」
-      </p>
-    </section>
 
     <!-- アクセス -->
     <section id="access" data-aos="fade-up" class="slide-up">
       <h2>アクセス</h2>
       <p>
-        ● 会場：○○市民ホール 大ホール<br>
-        ● 住所：東京都○○区1-2-3 ○○ビル 4F<br>
-        ● 最寄駅：○○駅 東口から徒歩5分<br>
-        <a class="btn-primary" href="https://maps.google.com" target="_blank" rel="noopener">Googleマップで見る</a>
+        二棟四階15Rにて上演
+        <img src="images/floor.png" alt="フロアマップ">
       </p>
     </section>
   </main>
-
-  <!-- Footer -->
-  <footer class="container slide-up" data-aos="fade-up">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="images/title-logo-small.png" alt="異世界転生演劇" width="120" class="footer-logo-img">
-      </div>
-      <div>
-        <p>&copy; 2025 異世界転生演劇制作委員会</p>
-      </div>
-    </div>
-  </footer>
 
   <!-- AOS スクリプト -->
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
