--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- レスポンシブ込みの追従ヘッダー ここまで -->
-    <img src="image/title.png">
+    <img src="image/Title.PNG">
     <h1><span class="satcol">6/21(土)</span>　<span class="suncol">6/22(日)</span></h1>
     <p><span class="smalltext">※6/21は午前のみ保護者公開、6/22は一般公開です。</span></p>
     <h2 id="floor-map">
